--- a/src/app/ships/ship/ship.component.html
+++ b/src/app/ships/ship/ship.component.html
@@ -3,6 +3,9 @@
     <div mat-card-title>{{ship?.name}}</div>
   </mat-card-header>
   <div>
+    <img [src]="ship.picture">
+  </div>
+  <div>
     {{ship?.description}}
   </div>
   <mat-card-actions>
