--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,10 @@
   <span class="spacer"></span>
   <button mat-button routerLink="/about">About</button>
 </mat-toolbar>
+<div class="info">
+  <p>Angular Material pour l'UI</p>
+  <p>ngx-indexed-db pour le stockage local</p>
+  <p>ngx-webcam pour l'accès à la caméra</p>
+  <p>API geolocation pour la localisation</p>
+</div>
 <router-outlet></router-outlet>
